--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DialogueSystemDemo</title>
+    <title>Unity WebGL Player | TheCave</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -19,19 +19,19 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DialogueSystemDemo</div>
+        <div id="unity-build-title">TheCave</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/TheCave_WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TheCave_WebGL.data.gz",
-        frameworkUrl: buildUrl + "/TheCave_WebGL.framework.js.gz",
-        codeUrl: buildUrl + "/TheCave_WebGL.wasm.gz",
+        dataUrl: buildUrl + "/TheCave_WebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/TheCave_WebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/TheCave_WebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "DialogueSystemDemo",
+        productName: "TheCave",
         productVersion: "0.1",
       };
 
